design-system.css
/* ... */
/* Spacing */
.spacing {
  display: flex;
  flex-direction: column;
  margin-left: 0;
  margin-top: 70px;
  margin-bottom: 10px;
  padding-left: 10px;
  padding-right: 10px;
}

/* Contianers */
.layout {
  display: flex;
  flex-direction: column;
  margin-left: 0;
  margin-top: 70px;
  margin-bottom: 10px;
  padding-left: 10px;
  padding-right: 10px;
}

/* Colors Page */
.colors {
  display: flex;
  flex-direction: column;
  margin-left: 0;
  margin-top: 70px;
  margin-bottom: 10px;
  padding-left: 10px;
  padding-right: 10px;
}
/* Primary color */
.c-color {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 500px;
  height: 250px;
}

.c-color-white {
  width: 500px;
  height: 250px;
  border: 1.5px solid var(--clr-card);
}

/* Typography */
.font {
  display: flex;
  flex-direction: column;
  margin-left: 0;
  margin-top: 70px;
  margin-bottom: 10px;
  padding-left: 10px;
  padding-right: 10px;
}

/* Font Family */
.u-fontfamily {
  display: flex;
  flex-direction: column;
  align-items: left;
  width: 100%;
  text-align: left;
}

.fontfamily {
  width: 100%;
  border-collapse: collapse;
  margin-top: 20px;
}

/* Font style */
.u-fontclass {
  display: flex;
  flex-direction: column;
  align-items: left;
  width: 100%;
  text-align: left;
}

.fontclass {
  width: 100%;
  border-collapse: collapse;
  margin-top: 20px;
}

/* Spacing */
.spacing {
  display: flex;
  flex-direction: column;
  margin-left: 0;
  margin-top: 70px;
  margin-bottom: 10px;
}

/* Margin */
.margin {
  width: 100%;
  border-collapse: collapse;
  margin-top: 20px;
}

.u-margin {
  display: flex;
  flex-direction: column;
  align-items: left;
  width: 100%;
  text-align: left;
}

/* Padding */
.padding {
  width: 100%;
  border-collapse: collapse;
  margin-top: 20px;
}

.u-padding {
  display: flex;
  flex-direction: column;
  align-items: left;
  width: 100%;
  text-align: left;
}

/* Layout */
.layout {
  display: flex;
  flex-direction: column;
  margin-left: 0;
  margin-top: 70px;
  margin-bottom: 10px;
}

.flex {
  width: 100%;
  border-collapse: collapse;
  margin-top: 20px;
}

.u-flex {
  display: flex;
  flex-direction: column;
  align-items: left;
  width: 100%;
  text-align: left;
}

/* Container class */
.container-class {
  width: 100%;
  border-collapse: collapse;
  margin-top: 20px;
}

.u-container {
  display: flex;
  flex-direction: column;
  align-items: left;
  width: 100%;
  text-align: left;
}

/* Table style */

.swatch,
tr,
th,
td {
  border: 1px solid #000;
  padding: 15px;
  text-align: left;
  border-spacing: 0;
}

tr,
th,
td {
  border: 1px solid #000;
  padding: 6px;
  text-align: left;
  border-spacing: 0;
}
/* Navbar page */
.navbar {
  display: flex;
  flex-direction: column;
  margin-top: 70px;
  margin-bottom: 10px;
}

/* Mobile navbar */
.toggle-nav {
  margin-right: 10px;
}

.hamburger__menu {
  cursor: pointer;
}

/* Hero Page*/
.hero {
  display: flex;
  flex-direction: column;
  margin-top: 70px;
  margin-bottom: 10px;
}
.hero-section {
  position: relative;
}

.hero-image {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  z-index: -1;
  opacity: 95%;
}

.hero-content {
  position: relative;
  z-index: 1;
  max-width: 90%;
  padding: 20px;
}

.cta__button {
  text-decoration: none;
  transition: background-color 0.3s ease;
}

.cta__button:hover {
  background-color: var(--text-hover-100);
}
/* Interactive page */
.interactive {
  display: flex;
  flex-direction: column;
  margin-top: 70px;
  margin-bottom: 10px;
}
.cta__button:hover {
  background-color: var(--primary-bg);
}

/* Carousel page */
.carousel {
  display: flex;
  flex-direction: column;
  margin-top: 70px;
  margin-bottom: 10px;
}
/* Breadcrumbs Page*/
.breadcrumbs {
  display: flex;
  flex-direction: column;
  margin-top: 70px;
  margin-bottom: 10px;
}
/* Breadcrumb styles for mobile */
.c-breadcrumbs ul {
  padding: 0;
  list-style-type: none;
}

.c-breadcrumbs li {
  display: inline;
  font-size: 16px;
}

.c-breadcrumbs li:not(:last-child):after {
  content: ">";
  margin: 0;
}

.c-breadcrumbs a {
  text-decoration: none;
}

.c-breadcrumbs a:hover {
  text-decoration: underline;
}
/* Images page */
.images {
  display: flex;
  flex-direction: column;
  margin-top: 70px;
  margin-bottom: 10px;
}

.card-image__container {
  align-items: center; /* Align items horizontally */
  text-align: center; /* Align text content inside the container */
}
/* Cards page */
.cards {
  display: flex;
  flex-direction: column;
  margin-top: 70px;
  margin-bottom: 10px;
}
.code-snippet-container {
  align-items: center;
  position: relative;
  overflow-x: hidden; /* Enable horizontal scrolling if needed */
  width: calc(100% - 40px); /* Adjust width to fit within the screen */
}
#codeSnippet {
  text-align: left;
}
.code-snippet-container pre {
  overflow-x: auto;
  overflow-y: hidden;
}
.code-snippet-container button {
  position: absolute;
  top: 5px;
  right: 5px;
  width: auto;
  cursor: pointer;
}
/* Accordion page */
.accordion {
  display: flex;
  flex-direction: column;
  margin-top: 70px;
  margin-bottom: 10px;
}

.c-accordion {
  cursor: pointer;
  padding: 18px;
  width: 100%;
  border: none;
  outline: none;
  transition: 0.4s;
}

.c-accordion:after {
  content: "\002B";
  color: var(--clr-white);
  font-weight: bold;
  float: right;
  margin-left: 5px;
}

.c-accordion.active:after {
  content: "\2212";
}

.c-panel {
  padding: 0 20px;
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.5s ease-in-out;
}
/* Forms page */
.c-forms {
  display: flex;
  flex-direction: column;
  margin-top: 70px;
  margin-bottom: 10px;
}
/* List Page */
.list {
  display: flex;
  flex-direction: column;
  margin-top: 70px;
  margin-bottom: 10px;
}
/* Footer page */
.footer {
  display: flex;
  flex-direction: column;
  margin-top: 70px;
  margin-bottom: 10px;
}
/* ... */

